tests/baselines/reference/assignmentCompatability42.errors.txt
==== tests/cases/compiler/assignmentCompatability42.ts (1 errors) ====
    module __test1__ {
        export interface interfaceWithPublicAndOptional<T,U> { one: T; two?: U; };  var obj4: interfaceWithPublicAndOptional<number,string> = { one: 1 };;
        export var __val__obj4 = obj4;
    }
    module __test2__ {
        export     class classWithPublicPrivate<T,U> { constructor(public one: T, private two: U) {} }   var x7 = new classWithPublicPrivate(1, "a");;
        export var __val__x7 = x7;
    }
    __test2__.__val__x7 = __test1__.__val__obj4
    ~~~~~~~~~~~~~~~~~~~
!!! assignmentCompatability42.ts(9,1): error TS2012: Cannot convert '__test1__.interfaceWithPublicAndOptional<number, string>' to '__test2__.classWithPublicPrivate<number, string>':
!!! 	Property 'two' defined as public in type '__test1__.interfaceWithPublicAndOptional<T, U>' is defined as private in type '__test2__.classWithPublicPrivate<T, U>'.